# janus

./: .gitignore  CLEAR_DATABASE.sh  README.md  backend_scrape.sh  deploy-script.sh  docker-compose.yml  update_jobs.sh
backend/: Dockerfile  README.md  cli.py  crud.py  database.py  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/app/: cli.py  cli_init.py  cli_ml.py  crud.py  database.py  db_init.py  main.py  models.py  scheduler.py  schemas.py  websocket.py
backend/app/api/: api.py
backend/app/api/endpoints/: companies.py  jobs.py  sources.py  stats.py
backend/app/ml/: __init__.py  logo_fetcher.py  ml_job_processor.py  processor.py  summarizer.py
backend/app/ml/models/: __init__.py
backend/app/ml/processors/: __init__.py  job_classifier.py  requirements_extractor.py
backend/app/ml/utils/: __init__.py  text_processing.py
backend/app/scraper/: base.py  company-to-ticker.py  company_scrapers.py  download_tickers.py  example_company.py  import-jobs.py  jobs.csv  main.py  manager.py  ml_job_processor.py  ml_manager.py  post-processor.py  processed_jobs.json
backend/app/scraper/scrapers/: __init__.py  company_scraper.py  glassdoor_scraper.py  indeed_scraper.py  linkedin_scraper.py  nvidia_scraper.py
backend/ml/: summarizer.py
backend/scraper/: example_company.py  manager.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
scripts/: deploy_ml_pipeline.sh  fetch_logos.sh  janus_deploy.sh  launch_production.sh  logs.sh  process.sh  rebuild_backend.sh  reset_db.sh  restart.sh  restart_backend.sh  (+9 more)
(+19 files in other folders)
