[project]
name = "backend"
version = "0.1.0"
description = "Janus Internship Tracker Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.27.0",
    "httpx>=0.24.1",
    "beautifulsoup4>=4.12.2",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.10.6",
    "playwright>=1.40.0",
    "scikit-learn>=1.3.0",
]